--- a/src/components/UsersContainer/UserComp/UserComp.module.css
+++ b/src/components/UsersContainer/UserComp/UserComp.module.css
@@ -1,5 +1,5 @@
 .UserComp {
-    width: 35%;
+    width: 65%;
     display: flex;
     flex-flow: column;
     box-sizing: border-box;
@@ -14,10 +14,9 @@
     text-align: center;
 }
 
-.UserComp > h2 {
-    width: 70%;
-    border-bottom: 2px solid black;
-    margin: 0 0 10px;
+.UserComp > h3 {
+    margin: 10px 0 2px;
+    text-align: center;
 }
 
 .UserComp > p {
@@ -27,9 +26,13 @@
     font-weight: 500;
 }
 
-.UserComp > h3 {
-    width: 70%;
-    border-top: 2px solid black;
-    margin: 10px 0 2px;
-    text-align: start;
+.UserComp > button {
+    width: 40%;
+    background: white;
+    border: 2px solid black ;
+    border-radius: 15px;
+    margin-top: 10px;
+
 }
+
+
